refactor: use single restaurant category
