# server/infra/db/categories.sql.go
@@ -1,46 +1,0 @@
-// Code generated by sqlc. DO NOT EDIT.
-// versions:
-//   sqlc v1.27.0
-// source: categories.sql
-
-package db
-
-import (
-	"context"
-
-	"github.com/google/uuid"
-)
-
-const findAllCategories = `-- name: FindAllCategories :many
-select c.id, c.label, c.icon
-from categories c
-`
-
-type FindAllCategoriesRow struct {
-	ID    uuid.UUID `json:"id"`
-	Label string    `json:"label"`
-	Icon  string    `json:"icon"`
-}
-
-func (q *Queries) FindAllCategories(ctx context.Context) ([]FindAllCategoriesRow, error) {
-	rows, err := q.db.QueryContext(ctx, findAllCategories)
-	if err != nil {
-		return nil, err
-	}
-	defer rows.Close()
-	items := []FindAllCategoriesRow{}
-	for rows.Next() {
-		var i FindAllCategoriesRow
-		if err := rows.Scan(&i.ID, &i.Label, &i.Icon); err != nil {
-			return nil, err
-		}
-		items = append(items, i)
-	}
-	if err := rows.Close(); err != nil {
-		return nil, err
-	}
-	if err := rows.Err(); err != nil {
-		return nil, err
-	}
-	return items, nil
-}
